--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -126,6 +126,7 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -359,7 +360,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
@@ -374,7 +374,6 @@ deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
-deny 2a05:541:150:6::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
