--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.29.3.87;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -148,6 +149,7 @@ allow 146.59.35.38;
 allow 146.70.146.26;
 allow 146.70.164.210;
 allow 147.45.116.145;
+allow 147.45.49.17;
 allow 147.45.78.34;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -1165,6 +1167,7 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
+allow 2a05:541:150:6::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1403,7 +1406,6 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.233.91.230;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
