--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,3 +1,4 @@
+set_real_ip_from 100.29.3.87;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 102.130.127.117;
@@ -148,6 +149,7 @@ set_real_ip_from 146.59.35.38;
 set_real_ip_from 146.70.146.26;
 set_real_ip_from 146.70.164.210;
 set_real_ip_from 147.45.116.145;
+set_real_ip_from 147.45.49.17;
 set_real_ip_from 147.45.78.34;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
@@ -1165,6 +1167,7 @@ set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
+set_real_ip_from 2a05:541:150:6::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
@@ -1403,7 +1406,6 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.233.91.230;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
