--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -157,6 +157,7 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 154.26.159.157;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.19.230.94;
@@ -293,6 +294,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -683,6 +685,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -901,8 +904,6 @@ allow 2.58.56.248;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.90;
-allow 2.58.95.35;
-allow 2.58.95.38;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
@@ -1507,7 +1508,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.22.164.140;
+allow 52.44.66.111;
 allow 5.255.100.219;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1548,6 +1549,7 @@ allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
 allow 5.79.66.19;
+allow 59.28.19.253;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.179;
