--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -202,6 +202,7 @@ deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.126.253.190;
 deny 176.58.100.98;
+deny 176.58.121.177;
 deny 176.58.89.182;
 deny 176.97.114.202;
 deny 178.162.209.56;
@@ -888,7 +889,6 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.152;
 deny 23.94.211.25;
@@ -912,7 +912,6 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -1065,6 +1064,7 @@ deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
+deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
@@ -1153,6 +1153,7 @@ deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a04:9dc0:31::c0cc:73;
 deny 2a04:9dc0:31::c0cc:fb;
 deny 2a05:541:110:20::1;
@@ -1414,6 +1415,7 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
 deny 41.216.183.87;
+deny 44.194.143.49;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1508,7 +1510,6 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.44.66.111;
 deny 5.255.100.219;
 deny 5.255.103.190;
 deny 5.255.103.235;
@@ -1608,6 +1609,7 @@ deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.115;
 deny 83.97.20.251;
+deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.225.54;
 deny 84.239.46.144;
