--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,4 +1,3 @@
-deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
@@ -137,9 +136,6 @@ deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:eb06::1;
-deny 2602:fccf:310:1::a;
-deny 2602:fccf:310:1::b;
-deny 2602:fccf:310:1::c;
 deny 2602:fef9:100:1100::199;
 deny 2603:c026:c102:5ff:2603:c026:c102:5ff;
 deny 2604:2dc0:202:300::ed3;
@@ -242,9 +238,6 @@ deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
-deny 2605:6400:d814:1b8::4;
-deny 2605:6400:d814:2775::;
-deny 2605:6400:d814:4181::1;
 deny 2605:a140:2186:5418::1;
 deny 2605:aa80:0:9::3;
 deny 2607:5300:201:3100::535e;
@@ -604,6 +597,7 @@ deny 2a12:5940:9101::2;
 deny 2a12:5940:b4db::2;
 deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c826::2;
+deny 2a12:5940:d4dc::2;
 deny 2a12:5940:f0a8::2;
 deny 2a12:a800:2:1:185:241:208:81;
 deny 2a12:a800:2:1:45:138:16:203;
