--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -13,9 +13,6 @@ set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 103.253.24.18;
 set_real_ip_from 103.28.52.93;
-set_real_ip_from 104.167.242.116;
-set_real_ip_from 104.167.242.117;
-set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.1.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.232.126;
@@ -136,10 +133,6 @@ set_real_ip_from 141.98.119.106;
 set_real_ip_from 142.44.133.81;
 set_real_ip_from 142.44.234.69;
 set_real_ip_from 143.110.156.176;
-set_real_ip_from 144.172.118.4;
-set_real_ip_from 144.172.118.55;
-set_real_ip_from 144.172.118.76;
-set_real_ip_from 144.172.118.90;
 set_real_ip_from 144.24.197.112;
 set_real_ip_from 146.59.234.220;
 set_real_ip_from 146.59.35.246;
@@ -157,7 +150,6 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
-set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.19.230.94;
@@ -267,6 +259,7 @@ set_real_ip_from 185.107.57.66;
 set_real_ip_from 185.107.70.56;
 set_real_ip_from 185.112.144.11;
 set_real_ip_from 185.112.146.167;
+set_real_ip_from 185.112.83.205;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.126.117.21;
 set_real_ip_from 185.129.61.1;
@@ -295,7 +288,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -686,7 +678,6 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
-set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
@@ -923,9 +914,6 @@ set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fc24:19:30::1;
 set_real_ip_from 2602:fc24:19:eb06::1;
-set_real_ip_from 2602:fccf:310:1::a;
-set_real_ip_from 2602:fccf:310:1::b;
-set_real_ip_from 2602:fccf:310:1::c;
 set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:202:300::ed3;
@@ -1028,9 +1016,6 @@ set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
-set_real_ip_from 2605:6400:d814:1b8::4;
-set_real_ip_from 2605:6400:d814:2775::;
-set_real_ip_from 2605:6400:d814:4181::1;
 set_real_ip_from 2605:a140:2186:5418::1;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::535e;
@@ -1391,6 +1376,7 @@ set_real_ip_from 2a12:5940:9101::2;
 set_real_ip_from 2a12:5940:b4db::2;
 set_real_ip_from 2a12:5940:b4dd::2;
 set_real_ip_from 2a12:5940:c826::2;
+set_real_ip_from 2a12:5940:d4dc::2;
 set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:a800:2:1:185:241:208:81;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
@@ -1415,7 +1401,6 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 41.216.183.87;
-set_real_ip_from 44.194.143.49;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1511,6 +1496,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1538,6 +1524,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.158.44.116;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
