--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -13,6 +13,9 @@ set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 103.253.24.18;
 set_real_ip_from 103.28.52.93;
+set_real_ip_from 104.167.242.116;
+set_real_ip_from 104.167.242.117;
+set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.1.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.232.126;
@@ -133,6 +136,11 @@ set_real_ip_from 141.98.119.106;
 set_real_ip_from 142.44.133.81;
 set_real_ip_from 142.44.234.69;
 set_real_ip_from 143.110.156.176;
+set_real_ip_from 144.172.118.4;
+set_real_ip_from 144.172.118.47;
+set_real_ip_from 144.172.118.55;
+set_real_ip_from 144.172.118.76;
+set_real_ip_from 144.172.118.90;
 set_real_ip_from 144.24.197.112;
 set_real_ip_from 146.59.234.220;
 set_real_ip_from 146.59.35.246;
@@ -150,6 +158,7 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
+set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.19.230.94;
@@ -216,6 +225,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
+set_real_ip_from 178.30.80.251;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -288,6 +298,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -678,6 +689,7 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
+set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
@@ -834,7 +846,6 @@ set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
-set_real_ip_from 212.95.52.76;
 set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
 set_real_ip_from 216.73.159.101;
@@ -914,6 +925,9 @@ set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fc24:19:30::1;
 set_real_ip_from 2602:fc24:19:eb06::1;
+set_real_ip_from 2602:fccf:310:1::a;
+set_real_ip_from 2602:fccf:310:1::b;
+set_real_ip_from 2602:fccf:310:1::c;
 set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:202:300::ed3;
@@ -1016,6 +1030,9 @@ set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
+set_real_ip_from 2605:6400:d814:1b8::4;
+set_real_ip_from 2605:6400:d814:2775::;
+set_real_ip_from 2605:6400:d814:4181::1;
 set_real_ip_from 2605:a140:2186:5418::1;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::535e;
@@ -1401,6 +1418,7 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 41.216.183.87;
+set_real_ip_from 44.215.173.61;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1470,7 +1488,6 @@ set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.182.21.248;
-set_real_ip_from 46.195.240.9;
 set_real_ip_from 46.226.105.168;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
@@ -1524,7 +1541,6 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.158.44.116;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
