--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -159,7 +159,6 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
-set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.19.230.94;
@@ -557,49 +556,20 @@ set_real_ip_from 192.108.48.150;
 set_real_ip_from 192.42.116.14;
 set_real_ip_from 192.42.116.15;
 set_real_ip_from 192.42.116.17;
-set_real_ip_from 192.42.116.173;
-set_real_ip_from 192.42.116.174;
-set_real_ip_from 192.42.116.175;
-set_real_ip_from 192.42.116.176;
-set_real_ip_from 192.42.116.177;
-set_real_ip_from 192.42.116.178;
-set_real_ip_from 192.42.116.179;
 set_real_ip_from 192.42.116.18;
-set_real_ip_from 192.42.116.180;
-set_real_ip_from 192.42.116.181;
-set_real_ip_from 192.42.116.182;
-set_real_ip_from 192.42.116.183;
-set_real_ip_from 192.42.116.184;
-set_real_ip_from 192.42.116.185;
-set_real_ip_from 192.42.116.186;
-set_real_ip_from 192.42.116.187;
 set_real_ip_from 192.42.116.19;
-set_real_ip_from 192.42.116.191;
-set_real_ip_from 192.42.116.192;
-set_real_ip_from 192.42.116.193;
 set_real_ip_from 192.42.116.194;
-set_real_ip_from 192.42.116.195;
-set_real_ip_from 192.42.116.196;
-set_real_ip_from 192.42.116.197;
-set_real_ip_from 192.42.116.198;
 set_real_ip_from 192.42.116.199;
 set_real_ip_from 192.42.116.20;
-set_real_ip_from 192.42.116.200;
-set_real_ip_from 192.42.116.201;
-set_real_ip_from 192.42.116.202;
-set_real_ip_from 192.42.116.203;
 set_real_ip_from 192.42.116.208;
 set_real_ip_from 192.42.116.209;
 set_real_ip_from 192.42.116.210;
 set_real_ip_from 192.42.116.211;
-set_real_ip_from 192.42.116.212;
 set_real_ip_from 192.42.116.213;
 set_real_ip_from 192.42.116.214;
 set_real_ip_from 192.42.116.215;
-set_real_ip_from 192.42.116.216;
 set_real_ip_from 192.42.116.217;
 set_real_ip_from 192.42.116.218;
-set_real_ip_from 192.42.116.219;
 set_real_ip_from 192.42.116.22;
 set_real_ip_from 192.42.116.23;
 set_real_ip_from 192.42.116.24;
@@ -689,7 +659,6 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
-set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
@@ -734,46 +703,17 @@ set_real_ip_from 2001:67c:289c:4::77;
 set_real_ip_from 2001:67c:289c:4::78;
 set_real_ip_from 2001:67c:289c:4::79;
 set_real_ip_from 2001:67c:289c:4::80;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:173;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:174;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:175;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:176;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:177;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:178;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:179;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:180;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:181;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:182;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:183;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:184;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:185;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:186;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:187;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:191;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:192;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:193;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:194;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:195;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:196;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:197;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:198;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:199;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:200;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:201;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:202;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:203;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:208;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:209;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:210;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:211;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:212;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:213;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:214;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:215;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:216;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:217;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:218;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:219;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5517;
@@ -1387,6 +1327,7 @@ set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a10:c800:1:9cc6::1;
+set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
@@ -1515,7 +1456,6 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1542,8 +1482,8 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
+set_real_ip_from 52.86.175.244;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.209.82.98;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -1611,6 +1551,7 @@ set_real_ip_from 82.153.138.24;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
+set_real_ip_from 82.221.139.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.115;
@@ -1673,6 +1614,7 @@ set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
 set_real_ip_from 91.219.236.101;
+set_real_ip_from 91.219.237.39;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
